--- a/css/main.css
+++ b/css/main.css
@@ -3,8 +3,8 @@
     --color-on-background: black;
     --color-background-hover: #eee;
     --color-on-background-hover: black;
-    --color-primary: #990000;
-    --color-on-primary: #990000;
+    --color-primary: #ff6f00;
+    --color-on-primary: white;
     --color-error: #de0000;
     --color-on-error: white;
 }
