--- a/css/main.css
+++ b/css/main.css
@@ -16,9 +16,9 @@ header.dark {
     --color-on-background: white;
     --color-background-hover: #27262c;
     --color-on-background-hover: white;
-    --color-primary: #990000;
+    --color-primary: #ff6f00;
     --color-primary-disabled: #1f213c;
-    --color-on-primary: #990000;
+    --color-on-primary: white;
     --color-error: #de0000;
     --color-on-error: white;
 }
