--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@
     --color-background-hover: #eee;
     --color-on-background-hover: black;
     --color-primary: black;
-    --color-on-primary: white;
+    --color-on-primary: #de0000;
     --color-error: #de0000;
     --color-on-error: white;
 }
