--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 :root {
     --color-background: white;
     --color-on-background: black;
-    --color-background-hover: #de0000;
+    --color-background-hover: #eee;
     --color-on-background-hover: #de0000;
     --color-primary: black;
     --color-on-primary: #de0000;
