--- a/css/main.css
+++ b/css/main.css
@@ -36,8 +36,8 @@ body {
 
 header,
 main {
-    background-color: var(--color-background);
-    color: var(--color-on-background);
+    background-color: #C5E4FB;
+    color: white;
     display: grid;
     grid-template-columns: minmax(16rem, 1fr) minmax(16rem, 2fr) minmax(
             16em,
