--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 :root {
-    --color-background: white;
+    --color-background: #de0000;
     --color-on-background: black;
     --color-background-hover: #eee;
     --color-on-background-hover: #de0000;
