--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 :root {
-    --color-background: #76C5FF;
+    --color-background: #C5E4FB;
     --color-on-background: black;
     --color-background-hover: #eee;
     --color-on-background-hover: #de0000;
