--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@
     --color-background: white;
     --color-on-background: black;
     --color-background-hover: #eee;
-    --color-on-background-hover: #de0000;
+    --color-on-background-hover: black;
     --color-primary: black;
     --color-on-primary: #de0000;
     --color-error: #de0000;
